# snail

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
imgs/: attribution.html
inc/snail/: canvas.h  shapes.h  snail.h  version.h
src/: main.c
src/snail/: canvas.c  shapes.c  version.c
tests/: Makefile  main.c
